--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,121 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
-
-.main {
-  padding: 5rem 0;
   flex: 1;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+
+.wrapper {
+  width: 80%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  flex:1;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  justify-content: flex-start;
+  margin-left: 40px;
+  margin-top: 30px;
+  
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+.line {
+  border-bottom: 1px solid #d8dee2;
+  height: 47px;
+border-bottom: 1px solid black;
+  display: flex;
+  flex: 1;
+  background-color: blueviolet;
+}
+
+.cardContainer {
+  width: 280px;
+  height: 280px;
+  border: 1px solid #d8dee2;
+  display: flex;
+  margin: 20px;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.textContainer {
+  display: flex;
+  flex: 1;
+  margin: 8px;
+  flex-direction: column;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.jobTitle{
+  font-weight: 400;
+  font-size: 17px;
+  font-family: Open Sans;
+  text-align: left;
+  color: #333;
+  height: 60px;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.companyName {
+  font-weight: 200;
+  font-size: 17px;
+  font-family: Open Sans;
+  text-align: left;
+  color: grey;
+  height: 60px;
+  border-bottom: 1px solid #d8dee2;
+
 }
 
-.logo {
-  height: 1em;
+.date {
+  font-weight: 400;
+  font-size: 16px;
+  font-family: Open Sans;
+  text-align: left;
+  color: #333;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.buttonConatiner {
+  display:'flex';
+  background-color: hotpink;
+  width:'60%';
+  flex: 1;
+  border-bottom: 1px solid black;
+}
+
+.desrciption{
+  font-weight: 400;
+  font-size: 14px;
+  font-family: Open Sans;
+  text-align: left;
+  color: #333;
+  height: 80px;
+  border-bottom: 1px solid #d8dee2;
+}
+
+.button {
+  height: 50px;
+  width: 140px;
+  bottom: 0;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  background-color: #3174ee;
+  border: none;
+  margin-top: auto;
+  border-radius: 10px;
+  margin-right: 8px;
+  margin-top: 8px;
+  margin-left: 8px;
+  outline:none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background: white;
+  color: #3174e4;
+  box-shadow: 0 1px 32px -8px rgba(0,0,0,.2);
+}
+
+
+.cardContainer:hover {
+  background: #fafbfc;
+    box-shadow: 0 1px 32px -8px rgba(0,0,0,.2);
 }
